Mise à jour du formulaire

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		<div class="home-text">
 			<div class="container fade-elements">
 				<div class="ten columns">
-					<h1>Warp Code</h1>
+					<h1 class="warp">Warp Code</h1>
 					<img class="lion" src="images/lion.png" alt="lion">
 				</div>
 			</div>
