mise à jour header

--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -48,29 +48,16 @@
 
 <body>
     <!--================================================== HEADER    ================================================== -->
-	<nav id="menu-wrap" class="menu-back cbp-af-header">
-            <div class="container">
-                <div class="twelve columns">
-                    <div class="logo"></div>
-                    <ul class="slimmenu">
-                        <li>
-                            <a href="index.html">Retour à l'accueil</a>
-                        </li>
-    
-                    </ul>
-                </div>
-            </div>
+	<nav class="menu">
+            <div class="logo"></div>
+            <ul>
+                <li class="close-menu"><a href="#home">Retour à l'acueil</a></li>
+               
+            </ul>
         </nav>
     <header class="section full-height back-dark" id="home">
 
-        <div class="home-text">
-            <div class="container fade-elements">
-                <div class="ten columns">
-                    <h1 class="warp">Mentions légales</h1>
-                    <img class="lion2" src="images/lion.png" alt="lion">
-                </div>
-            </div>
-        </div>
+            <img class="poster" src="images/poster.png" alt="poster">
 
         <a href="#about" data-gal="m_PageScroll2id" data-ps2id-offset="78">
             <div class="link-down fade-elements"></div>
