--- a/index.html
+++ b/index.html
@@ -52,41 +52,38 @@
 
 	<!--==================================================MENU    ================================================== -->
 
-	<nav id="menu-wrap" class="menu-back cbp-af-header">
-		<div class="container">
-			<div class="twelve columns">
-				<div class="logo"></div>
-				<ul class="slimmenu">
-					<li>
-						<a href="#home">Accueil</a>
-					</li>
-					<li>
-						<a href="#services">Services</a>
-					</li>
-					<li>
-						<a href="#team">Team</a>
-					</li>
-					<li>
-						<a href="#contact">Contact</a>
-					</li>
 
-				</ul>
-			</div>
-		</div>
+
+	<nav class="menu">
+		<div class="logo"></div>
+		<ul>
+			<li class="close-menu"><a href="#home">Accueil</a></li>
+			<li class="close-menu"><a href="#services">Services</a></li>
+			<li class="close-menu"><a href="#team">Team</a></li>
+			<li class="close-menu"><a href="#contact">Contact</a></li>
+		</ul>
 	</nav>
+
+	<div class="burger">
+		<svg width="100px" height="100px">
+			<path class="top" d="M 30 40 L 70 40 C 90 40 90 75 60 85 A 40 40 0 0 1 20 20 L 80 80"></path>
+			<path class="middle" d="M 30 50 L 70 50"></path>
+			<path class="bottom" d="M 70 60 L 30 60 C 10 60 10 20 40 15 A 40 38 0 1 1 20 80 L 80 20"></path>
+		</svg>
+	</div>
+	<div class="mask3"></div>
+
 
 	<!--================================================== HEADER    ================================================== -->
 
-	<header class="section full-height back-dark" id="home">
+	<header class="section full-height back-dark" style="background: black;" id="home">
 
-		<div class="home-text">
-			<div class="container fade-elements">
-				<div class="ten columns">
-					<h1 class="warp">Warp Code</h1>
-					<img class="lion" src="images/lion.png" alt="lion">
-				</div>
-			</div>
-		</div>
+		
+		<video class="banniere"  autoplay src="videos/warp1.mp4"></video>
+		<img class="poster" src="images/poster.png" alt="poster">
+
+	
+
 
 		<a href="#about" data-gal="m_PageScroll2id" data-ps2id-offset="78">
 			<div class="link-down fade-elements"></div>
@@ -112,8 +109,8 @@
 				<div class="four columns">
 					<div class="about-wrap">
 						<div class="about-icon">
-							<svg version="1.1" id="svg-icon-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
-							    y="0px" width="48px" height="48px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
+							<svg version="1.1" id="svg-icon-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+							    x="0px" y="0px" width="48px" height="48px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
 								<g>
 									<rect x="1" y="16" fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" width="52" height="40" />
 								</g>
@@ -123,14 +120,15 @@
 							</svg>
 						</div>
 						<h5 data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">Vitrine.</h5>
-						<p data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">Nous vous rendons visible sur le web en fonction de vos besoins et du public visé.</p>
+						<p data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">Nous vous rendons visible sur le web en
+							fonction de vos besoins et du public visé.</p>
 					</div>
 				</div>
 				<div class="four columns">
 					<div class="about-wrap">
 						<div class="about-icon">
-							<svg version="1.1" id="svg-icon-2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
-							    y="0px" width="48px" height="48px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
+							<svg version="1.1" id="svg-icon-2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+							    x="0px" y="0px" width="48px" height="48px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
 								<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="16" y1="24" x2="38" y2="24" />
 								<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="16" y1="34" x2="38" y2="34" />
 								<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="16" y1="44" x2="38" y2="44" />
@@ -147,14 +145,15 @@
 							</svg>
 						</div>
 						<h5 data-scroll-reveal="enter bottom move 100px over 1s after 0.5s">Sur mesure.</h5>
-						<p data-scroll-reveal="enter bottom move 100px over 1s after 0.5s">Nous vous conseillons et sommes à l'écoute de vos besoins pour un projet à votre image.</p>
+						<p data-scroll-reveal="enter bottom move 100px over 1s after 0.5s">Nous vous conseillons et sommes à l'écoute de
+							vos besoins pour un projet à votre image.</p>
 					</div>
 				</div>
 				<div class="four columns">
 					<div class="about-wrap">
 						<div class="about-icon">
-							<svg version="1.1" id="svg-icon-3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
-							    y="0px" width="48px" height="48px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
+							<svg version="1.1" id="svg-icon-3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+							    x="0px" y="0px" width="48px" height="48px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
 								<rect x="1" y="7" fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" width="62" height="50" />
 								<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="1" y1="15" x2="63" y2="15" />
 								<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="10" y1="11" x2="6" y2="11" />
@@ -167,7 +166,8 @@
 							</svg>
 						</div>
 						<h5 data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">Responsive et web design.</h5>
-						<p data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">Des projets s'adaptant à toute taille d'écran et basés sur l'expérience utilisateur.</p>
+						<p data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">Des projets s'adaptant à toute taille d'écran
+							et basés sur l'expérience utilisateur.</p>
 					</div>
 				</div>
 			</div>
@@ -196,8 +196,10 @@
 						<div class="services-wrap back-dark3">
 							<h5>
 								<span>&#xe001;</span>Identité Visuelle</h5>
-							<p>Nous développons votre site web sur-mesure. Son ergonomie est pensée afin d'assurer une expérience utilisateur optimale
-								tout en restant simple d'utilisation. Nous faisons converger vos besoins tout en prenant en compte les réalités du
+							<p>Nous développons votre site web sur-mesure. Son ergonomie est pensée afin d'assurer une expérience
+								utilisateur optimale
+								tout en restant simple d'utilisation. Nous faisons converger vos besoins tout en prenant en compte les réalités
+								du
 								marché et le profil de votre cible.
 						</div>
 					</article>
@@ -205,7 +207,8 @@
 						<div class="services-wrap back-dark3">
 							<h5>
 								<span>&#xe02b;</span>Développement Web</h5>
-							<p>Nous développons des sites internet vitrine, e-commerce et des applications web en utilisant les langages HTML5, CSS3,
+							<p>Nous développons des sites internet vitrine, e-commerce et des applications web en utilisant les langages
+								HTML5, CSS3,
 								JavaScript, PHP 7, MySQL ainsi que les CMS (système de gestion de contenu) WordPress & PrestaShop.</p>
 						</div>
 					</article>
@@ -213,8 +216,10 @@
 						<div class="services-wrap back-dark3">
 							<h5>
 								<span>&#xe040;</span>Responsive Web Design.</h5>
-							<p>Nos sites sont conçus et optimisés afin d'offrir une navigation confortable sur tous types de supports (smartphones,
-								tablettes, grand écran...). Plus de 60% des français surfent aujourd'hui sur le web avec leur smartphone. Posséder
+							<p>Nos sites sont conçus et optimisés afin d'offrir une navigation confortable sur tous types de supports
+								(smartphones,
+								tablettes, grand écran...). Plus de 60% des français surfent aujourd'hui sur le web avec leur smartphone.
+								Posséder
 								une version mobile de votre site augmente votre visibilité tout en améliorant votre image de professionnel.</p>
 						</div>
 					</article>
@@ -225,7 +230,8 @@
 						<div class="services-wrap back-dark3">
 							<h5>
 								<span>&#xe033;</span>Référencement Naturel & SEO</h5>
-							<p>Nous mettons en oeuvre tous les outils nécessaires pour vous assurer une visibilité et une meilleure indexation dans
+							<p>Nous mettons en oeuvre tous les outils nécessaires pour vous assurer une visibilité et une meilleure
+								indexation dans
 								les moteurs de recherche.</p>
 						</div>
 					</article>
@@ -233,7 +239,8 @@
 						<div class="services-wrap back-dark3">
 							<h5>
 								<span>&#xe050;</span>Web Marketing</h5>
-							<p>Nous proposons des solutions de statistiques avancées. Notre approche orientée vers le Community Management permet
+							<p>Nous proposons des solutions de statistiques avancées. Notre approche orientée vers le Community Management
+								permet
 								de déployer votre présence sur les réseaux sociaux en garantissant votre e-reputation.</p>
 						</div>
 					</article>
@@ -241,7 +248,8 @@
 						<div class="services-wrap back-dark3">
 							<h5>
 								<span>&#xe032;</span>Suivi personnalisé</h5>
-							<p>Nous assurons l'hébergement (nom de domaine, e-mail, espace disque...) et la sécurité de vos données personnelles.
+							<p>Nous assurons l'hébergement (nom de domaine, e-mail, espace disque...) et la sécurité de vos données
+								personnelles.
 								Et nous vous accompagnons dans l'évolution de votre projet.</p>
 						</div>
 					</article>
@@ -256,11 +264,11 @@
 		<section id="team" class="section padding-top-bottom back-dark3">
 			<div class="container">
 				<div class="twelve columns">
-					<div class="title-text left">
-						<p>Qui sommes nous ?
-							<span>La Team</span>
+					<div class="title-text left" >
+						<p>Qui&nbsp;sommes&nbsp;nous&nbsp;?&nbsp;<span>La&nbsp;Team</span>
 						</p>
-						<h3>Nous sommes une équipe de développeurs qui travaillons pour créer votre identité web et une expérience utilisateur
+						<h3 class="team">Nous sommes une équipe de développeurs qui travaillons pour créer votre identité web et une expérience
+							utilisateur
 							unique pour vos visiteurs.</h3>
 					</div>
 				</div>
@@ -514,11 +522,12 @@
 	<!--================================================== MAP GOOGLE    ================================================== -->
 
 	<section class="section back-black" id="contact">
-		<article class="section">
-			<div id="map">
-			</div>
-			<div class="mask"></div>
-		</article>
+
+		<div id="map">
+		</div>
+
+		<!-- <div class="mask"></div> -->
+
 		<!--================================================== CONTACT    ================================================== -->
 		<section class="section">
 			<div class="container">
@@ -573,8 +582,8 @@
 					</article>
 					<article class="twelve columns" data-scroll-reveal="enter bottom move 100px over 1s after 0.5s">
 						<div id="button-con">
-							<button class="send_message button-effect button--moema button--text-thick button--text-upper button--size-s" id="send" data-lang="fr"
-							    name='submit'>Envoyer</button>
+							<button class="send_message button-effect button--moema button--text-thick button--text-upper button--size-s" id="send"
+							    data-lang="fr" name='submit'>Envoyer</button>
 						</div>
 
 
