mise à jour mentions header

--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -57,7 +57,7 @@
         </nav>
     <header class="section full-height back-dark" id="home">
 
-            <img class="poster" src="images/poster.png" alt="poster">
+            <img class="poster-mentions" src="images/poster.png" alt="poster">
 
         <a href="#about" data-gal="m_PageScroll2id" data-ps2id-offset="78">
             <div class="link-down fade-elements"></div>
