--- a/index.html
+++ b/index.html
@@ -119,9 +119,8 @@
 								<circle fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" cx="40" cy="29" r="5" />
 							</svg>
 						</div>
-						<h5 data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">Vitrine.</h5>
-						<p data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">Nous vous rendons visible sur le web en
-							fonction de vos besoins et du public visé.</p>
+						<h5 data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">Site Vitrine</h5>
+						<p data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">Il présente votre activité et informe sur vos produits ou services, vous offrant une visibilité sur le web.</p>
 					</div>
 				</div>
 				<div class="four columns">
@@ -144,9 +143,8 @@
 								<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="55" y1="11" x2="63" y2="11" />
 							</svg>
 						</div>
-						<h5 data-scroll-reveal="enter bottom move 100px over 1s after 0.5s">Sur mesure.</h5>
-						<p data-scroll-reveal="enter bottom move 100px over 1s after 0.5s">Nous vous conseillons et sommes à l'écoute de
-							vos besoins pour un projet à votre image.</p>
+						<h5 data-scroll-reveal="enter bottom move 100px over 1s after 0.5s">Site e-commerce</h5>
+						<p data-scroll-reveal="enter bottom move 100px over 1s after 0.5s">Appellée aussi boutique en ligne, il permet de développer votre activité commerciale.</p>
 					</div>
 				</div>
 				<div class="four columns">
@@ -165,9 +163,8 @@
 								<rect x="38" y="25" fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" width="19" height="16" />
 							</svg>
 						</div>
-						<h5 data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">Responsive et web design.</h5>
-						<p data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">Des projets s'adaptant à toute taille d'écran
-							et basés sur l'expérience utilisateur.</p>
+						<h5 data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">Application Web</h5>
+						<p data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">Véritable logiciel en ligne, elle permet de manipuler les données de manière dynamique via une interface dynamique et administrable.</p>
 					</div>
 				</div>
 			</div>
