--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 							</svg>
 						</div>
 						<h5 data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">Application Web</h5>
-						<p data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">Véritable logiciel en ligne, elle permet de manipuler les données de manière dynamique via une interface dynamique et administrable.</p>
+						<p data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">Véritable logiciel en ligne, elle permet de manipuler les données de manière dynamique via une interface administrable.</p>
 					</div>
 				</div>
 			</div>
