--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 		<div class="section padding-top-small over-hidden">
 			<div class="container">
 				<div class="clear"></div>
-				<div class="twelve columns remove-bottom" data-scroll-reveal="enter top move 500px over 1.5s after 0.7s">
+				<div class="twelve columns remove-bottom" data-scroll-reveal="enter top move 500px over 0.7s after 0.2s">
 					<div class="full-img">
 						<img src="images/mockup.png" alt="Some image" />
 					</div>
@@ -119,8 +119,8 @@
 								<circle fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" cx="40" cy="29" r="5" />
 							</svg>
 						</div>
-						<h5 data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">Site Vitrine</h5>
-						<p data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">Il présente votre activité et informe sur vos produits ou services, vous offrant une visibilité sur le web.</p>
+						<h5 data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">Site Vitrine</h5>
+						<p data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">Il présente votre activité et informe sur vos produits ou services, vous offrant une visibilité sur le web.</p>
 					</div>
 				</div>
 				<div class="four columns">
@@ -143,8 +143,8 @@
 								<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="55" y1="11" x2="63" y2="11" />
 							</svg>
 						</div>
-						<h5 data-scroll-reveal="enter bottom move 100px over 1s after 0.5s">Site e-commerce</h5>
-						<p data-scroll-reveal="enter bottom move 100px over 1s after 0.5s">Appellée aussi boutique en ligne, il permet de développer votre activité commerciale.</p>
+						<h5 data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">Site e-commerce</h5>
+						<p data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">Appellée aussi boutique en ligne, il permet de développer votre activité commerciale.</p>
 					</div>
 				</div>
 				<div class="four columns">
@@ -163,8 +163,8 @@
 								<rect x="38" y="25" fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" width="19" height="16" />
 							</svg>
 						</div>
-						<h5 data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">Application Web</h5>
-						<p data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">Véritable logiciel en ligne, elle permet de manipuler les données de manière dynamique via une interface administrable.</p>
+						<h5 data-scroll-reveal="enter bottom move 100px over 0.5s after 0.5s">Application Web</h5>
+						<p data-scroll-reveal="enter bottom move 100px over 0.5s after 0.5s">Véritable logiciel en ligne, elle permet de manipuler les données de manière dynamique via une interface administrable.</p>
 					</div>
 				</div>
 			</div>
@@ -189,7 +189,7 @@
 							<h3>Nous créons des projets adaptés à vos besoins.</h3>
 						</div>
 					</article>
-					<article class="four columns" data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">
+					<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">
 						<div class="services-wrap back-dark3">
 							<h5>
 								<span>&#xe001;</span>Identité Visuelle</h5>
@@ -200,7 +200,7 @@
 								marché et le profil de votre cible.
 						</div>
 					</article>
-					<article class="four columns" data-scroll-reveal="enter bottom move 100px over 1s after 0.5s">
+					<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.2s">
 						<div class="services-wrap back-dark3">
 							<h5>
 								<span>&#xe02b;</span>Développement Web</h5>
@@ -209,7 +209,7 @@
 								JavaScript, PHP 7, MySQL ainsi que les CMS (système de gestion de contenu) WordPress & PrestaShop.</p>
 						</div>
 					</article>
-					<article class="four columns" data-scroll-reveal="enter bottom move 100px over 1s after 0.7s">
+					<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">
 						<div class="services-wrap back-dark3">
 							<h5>
 								<span>&#xe040;</span>Responsive Web Design.</h5>
@@ -223,7 +223,7 @@
 
 					<div class="clear"></div>
 
-					<article class="four columns" data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">
+					<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">
 						<div class="services-wrap back-dark3">
 							<h5>
 								<span>&#xe033;</span>Référencement Naturel & SEO</h5>
@@ -232,7 +232,7 @@
 								les moteurs de recherche.</p>
 						</div>
 					</article>
-					<article class="four columns" data-scroll-reveal="enter bottom move 100px over 1s after 0.5s">
+					<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.2s">
 						<div class="services-wrap back-dark3">
 							<h5>
 								<span>&#xe050;</span>Web Marketing</h5>
@@ -241,7 +241,7 @@
 								de déployer votre présence sur les réseaux sociaux en garantissant votre e-reputation.</p>
 						</div>
 					</article>
-					<article class="four columns" data-scroll-reveal="enter bottom move 100px over 1s after 0.7s">
+					<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">
 						<div class="services-wrap back-dark3">
 							<h5>
 								<span>&#xe032;</span>Suivi personnalisé</h5>
@@ -269,7 +269,7 @@
 							unique pour vos visiteurs.</h3>
 					</div>
 				</div>
-				<article class="four columns" data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">
+				<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.2s after 0.2s">
 					<div class="team-wrap fst">
 						<img src="images/team1.jpg" alt="Some image" />
 						<h6>Sébastien Champalaune</h6>
@@ -289,7 +289,7 @@
 						</div>
 					</div>
 				</article>
-				<article class="four columns" data-scroll-reveal="enter bottom move 100px over 1s after 0.5s">
+				<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.4s after 0.2s">
 					<div class="team-wrap snd">
 						<img src="images/team2.jpg" alt="Some image" />
 						<h6>Florent Sadot</h6>
@@ -308,7 +308,7 @@
 						</div>
 					</div>
 				</article>
-				<article class="four columns" data-scroll-reveal="enter bottom move 100px over 1s after 0.5s">
+				<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.6s after 0.2">
 					<div class="team-wrap snd">
 						<img src="images/team3.jpg" alt="Some image" />
 						<h6>Cédric Le Tallec</h6>
@@ -529,7 +529,7 @@
 		<section class="section">
 			<div class="container">
 				<div class="twelve columns remove-top">
-					<article class="contact-det-wrap" data-scroll-reveal="enter bottom move 100px over 1s after 0.3s">
+					<article class="contact-det-wrap" data-scroll-reveal="enter bottom move 100px over 0.7s after 0.3s">
 						<div class="contact-det">
 							<p>1.
 								<span>écrivez-nous</span>
@@ -558,26 +558,26 @@
 			<div class="container">
 				<h2 style="margin-bottom:60px;">Un projet, une question ?</h2>
 				<form name="ajax-form" id="ajax-form" action="mail-it.php" method="post">
-					<article class="six columns" data-scroll-reveal="enter bottom move 100px over 1s after 0.5s">
+					<article class="six columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">
 						<label for="name">
 							<span class="error" id="err-name">Ce champ est requis !</span>
 						</label>
 						<input name="name" id="name" type="text" placeholder="Votre nom: *" />
 					</article>
-					<article class="six columns" data-scroll-reveal="enter bottom move 100px over 1s after 0.5s">
+					<article class="six columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">
 						<label for="email">
 							<span class="error" id="err-email">Ce champ est requis !</span>
 							<span class="error" id="err-emailvld">L'e-mail n'est pas au bon format !</span>
 						</label>
 						<input name="email" id="email" type="text" placeholder="E-Mail: *" />
 					</article>
-					<article class="twelve columns" data-scroll-reveal="enter bottom move 100px over 1s after 0.5s">
+					<article class="twelve columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">
 						<label for="message">
 							<span class="error" id="err-msg">Ce champ est requis !</span>
 						</label>
 						<textarea name="message" id="message" placeholder="Ecrivez-nous !"></textarea>
 					</article>
-					<article class="twelve columns" data-scroll-reveal="enter bottom move 100px over 1s after 0.5s">
+					<article class="twelve columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">
 						<div id="button-con">
 							<button class="send_message button-effect button--moema button--text-thick button--text-upper button--size-s" id="send"
 							    data-lang="fr" name='submit'>Envoyer</button>
@@ -603,12 +603,12 @@
 	<!--==================================================  FOOTER    ================================================== -->
 	<footer class="section back-dark padding-top-bottom overflow-hidden">
 		<div class="container">
-			<article class="six columns" data-scroll-reveal="enter bottom move 100px over 1s after 0.4s">
+			<article class="six columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">
 				<div class="footer-top">
 					<img src="images/logo.png" alt="logo" />
 				</div>
 			</article>
-			<article class="six columns" data-scroll-reveal="enter bottom move 100px over 1s after 0.4s">
+			<article class="six columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">
 				<div class="footer-top">
 					<div class="social-footer">
 						<ul class="list-social-footer">
@@ -622,17 +622,17 @@
 					</div>
 				</div>
 			</article>
-			<article class="twelve columns remove-top remove-bottom" data-scroll-reveal="enter bottom move 100px over 1s after 0.4s">
+			<article class="twelve columns remove-top remove-bottom" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">
 				<div class="footer-line"></div>
 			</article>
-			<article class="six columns" data-scroll-reveal="enter bottom move 100px over 1s after 0.4s">
+			<article class="six columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">
 				<div class="left-footer">
 					<p>2018 © Warp Code, Agence Web Créative. Tous droits réservés.
 						<a class="mention-footer" href="mentions-legales.html">Mentions légales</a>
 					</p>
 				</div>
 			</article>
-			<article class="two columns" data-scroll-reveal="enter bottom move 100px over 1s after 0.4s">
+			<article class="two columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3">
 				<a href="#home" data-gal="m_PageScroll2id">
 					<div class="arrow-up-footer"></div>
 				</a>
