--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 						</div>
 					</div>
 				</article>
-				<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.6s after 0.2">
+				<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.6s after 0.2s">
 					<div class="team-wrap snd">
 						<img src="images/team3.jpg" alt="Some image" />
 						<h6>Cédric Le Tallec</h6>
