--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<meta name="msapplication-TileImage" content="images/favicon//ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-	<script type="text/javascript" src="js/modernizr.custom.js"></script>
+	<script src="js/modernizr.custom.js"></script>
 
 
 </head>
@@ -643,16 +643,16 @@
 
 
 
-	<script type="text/javascript" src="js/jquery-2.1.1.js"></script>
-	<script type="text/javascript" src="js/royal_preloader.min.js"></script>
-	<script type="text/javascript" src="js/plugins.js"></script>
-	<script type="text/javascript" src="js/masonry.js"></script>
-	<script type="text/javascript" src="js/isotope.js"></script>
-	<script type="text/javascript" src="js/map.js"></script>
-	<script type="text/javascript" async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB9DliI4M9waCos3TzDYiXIp138WrkBLT8&callback=initMap"></script>
+	<script src="js/jquery-2.1.1.js"></script>
+	<script src="js/royal_preloader.min.js"></script>
+	<script src="js/plugins.js"></script>
+	<script src="js/masonry.js"></script>
+	<script src="js/isotope.js"></script>
+	<script src="js/map.js"></script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB9DliI4M9waCos3TzDYiXIp138WrkBLT8&callback=initMap"></script>
 	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
-	<script type="text/javascript" src="js/contact.js"></script>
-	<script type="text/javascript" src="js/custom.js"></script>
+	<script src="js/contact.js"></script>
+	<script src="js/custom.js"></script>
 </body>
 
 </html>
