--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -4,10 +4,19 @@
 <head>
     <meta charset="utf-8">
     <title>Warp Code</title>
-    <meta name="description" content="Warp Code Agence Web Créative à Vannes">
+    <meta name="description" lang="fr" content="Warp Code Agence Web Creative à Vannes, realisation de sites internet, sites vitrine, sites e-commerce, applications web">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-
+    <meta name="publisher" content="WarpCode56">
+    <meta name="keywords" lang="fr" content="développemeent web, agence, responsive, design, application web, Vannes, Morbihan">
+    <meta name="reply-to" content="contact@warp-code.fr">
+    <meta name="robots" content="index, follow">
+    <meta name="distribution" content="global">
+    <meta name="author" content="Sebastien CHAMPALAUNE, Florent Sadot, Cedric LE TALLEC">
+    <meta name="copyright" content="Warp-Code"> 
+    <meta name="abstract" content="Ce site presente l'activite de l'agence, qui nous sommes, ce que nous realisons">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="images/favicon//ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 
     <!--================================================== CSS  ================================================== -->
     <link rel="stylesheet" href="css/style.css" />
@@ -19,8 +28,6 @@
     <link rel="stylesheet" href="css/owl.carousel.css" />
     <link rel="stylesheet" href="css/owl.transitions.css" />
     <link rel="stylesheet" href="css/retina.css" />
-
-
 
     <!-- ==================================================Favicons	================================================== -->
     <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/">
@@ -37,13 +44,8 @@
     <link rel="icon" type="image/png" sizes="96x96" href="images/favicon//favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon//favicon-16x16.png">
     <link rel="manifest" href="images/favicon//manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="images/favicon//ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-
+    
     <script type="text/javascript" src="js/modernizr.custom.js"></script>
-
-
 </head>
 
 <body>
