balises alt & meta names

--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
 <head>
 	<meta charset="utf-8">
 	<title>Warp Code</title>
-	<meta name="description" content="Warp Code Agence Web Créative à Vannes">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-
+    <meta name="description" lang="fr" content="Warp Code Agence Web Creative à Vannes, realisation de sites internet, sites vitrine, sites e-commerce, applications web">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="publisher" content="WarpCode56">
+    <meta name="keywords" lang="fr" content="développemeent web, agence, responsive, design, application web, Vannes, Morbihan">
+    <meta name="reply-to" content="contact@warp-code.fr">
+    <meta name="robots" content="index, follow">
+    <meta name="distribution" content="global">
+    <meta name="author" content="Sebastien CHAMPALAUNE, Florent Sadot, Cedric LE TALLEC">
+    <meta name="copyright" content="Warp-Code"> 
+    <meta name="abstract" content="Ce site presente l'activite de l'agence, qui nous sommes, ce que nous realisons">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="images/favicon//ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 
 	<!--================================================== CSS  ================================================== -->
 	<link rel="stylesheet" href="css/style.css" />
@@ -19,8 +28,6 @@
 	<link rel="stylesheet" href="css/owl.carousel.css" />
 	<link rel="stylesheet" href="css/owl.transitions.css" />
 	<link rel="stylesheet" href="css/retina.css" />
-
-
 
 	<!-- ==================================================Favicons	================================================== -->
 	<link rel="apple-touch-icon" sizes="57x57" href="images/favicon/">
@@ -37,12 +44,8 @@
 	<link rel="icon" type="image/png" sizes="96x96" href="images/favicon//favicon-96x96.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon//favicon-16x16.png">
 	<link rel="manifest" href="images/favicon//manifest.json">
-	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="images/favicon//ms-icon-144x144.png">
-	<meta name="theme-color" content="#ffffff">
 
 	<script src="js/modernizr.custom.js"></script>
-
 
 </head>
 
@@ -51,8 +54,6 @@
 	<div id="royal_preloader"></div>
 
 	<!--==================================================MENU    ================================================== -->
-
-
 
 	<nav class="menu">
 		<div class="logo"></div>
@@ -73,14 +74,13 @@
 	</div>
 	<div class="mask3"></div>
 
-
 	<!--================================================== HEADER    ================================================== -->
 
 	<header class="section full-height back-dark" style="background: black;" id="home">
 
 		
 		<video class="banniere"  autoplay src="videos/warp1.mp4"></video>
-		<img class="poster" src="images/poster.png" alt="poster">
+		<img class="poster" src="images/poster.png" alt="logo de l'entreprise">
 
 	
 
@@ -271,7 +271,7 @@
 				</div>
 				<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.2s after 0.2s">
 					<div class="team-wrap fst">
-						<img src="images/team1.jpg" alt="Some image" />
+						<img src="images/team1.jpg" alt="photo portrait Sebastien" />
 						<h6>Sébastien Champalaune</h6>
 						<p>Créative developper
 							<br>39 ans
@@ -291,7 +291,7 @@
 				</article>
 				<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.2s">
 					<div class="team-wrap snd">
-						<img src="images/team2.jpg" alt="Some image" />
+						<img src="images/team2.jpg" alt="photo portrait Florent" />
 						<h6>Florent Sadot</h6>
 						<p>Développeur front et back end
 							<br>37 ans
@@ -310,7 +310,7 @@
 				</article>
 				<article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.8s after 0.2s">
 					<div class="team-wrap snd">
-						<img src="images/team3.jpg" alt="Some image" />
+						<img src="images/team3.jpg" alt="photo portrait Cedric" />
 						<h6>Cédric Le Tallec</h6>
 						<p>Développeur front et back end
 							<br>35 ans
@@ -497,13 +497,13 @@
 							<img src="images/logos/white1.png" alt="" />
 						</article>
 						<article class="item">
-							<img src="images/logos/garden.png" alt="garden" />
+							<img src="images/logos/garden.png" alt="logo de Jardin Indoor" />
 						</article>
 						<article class="item">
-							<img src="images/logos/kercode1.png" alt="" />
+							<img src="images/logos/kercode1.png" alt="logo de Kercode" />
 						</article>
 						<article class="item">
-							<img src="images/logos/white3.png" alt="garden" />
+							<img src="images/logos/white3.png" alt="logo de Luminis Prod" />
 						</article>
 						<article class="item">
 							<img src="images/logos/white4.png" alt="" />
@@ -605,7 +605,7 @@
 		<div class="container">
 			<article class="six columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">
 				<div class="footer-top">
-					<img src="images/logo.png" alt="logo" />
+					<img src="images/logo.png" alt="logo de l'entreprise" />
 				</div>
 			</article>
 			<article class="six columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">
