--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Warp Code</title>
-    <meta name="description" lang="fr" content="Warp Code Agence Web Creative à Vannes, realisation de sites internet, sites vitrine, sites e-commerce, applications web">
+    <meta name="description" lang="fr" content="Warp Code Agence Web Creative à Vannes, realisation de sites internet, vitrine, e-commerce, applications web">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="publisher" content="WarpCode56">
     <meta name="keywords" lang="fr" content="développemeent web, agence, responsive, design, application web, Vannes, Morbihan">
@@ -17,7 +17,20 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="images/favicon//ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-
+	<meta http-equiv="X-UA-compatible" content="IE=edge" />
+<!--******************Meta Facebook**************-->        
+	<meta property="og:title" content="Warp-Code, Agence Web Créative" />
+	<meta property="og:url" content="www.warp-code.fr" />
+	<meta property="og:type" content="website" />
+	<meta property="og:site_name" content="warp-code.fr" />
+	<meta property="og:description" content="Warp-Code, Agence Web Créative" />
+	<meta property="og:image" content="images/lion.png" />
+<!--******************Meta Twitter**************-->             
+	<meta name="twitter:card" content="summary" />
+	<meta name="twitter:title" content="Warp-Code, Agence Web Créative" />
+	<meta name="twitter:url" content="www.warp-code.fr" />
+	<meta name="twitter:description" content="Warp-Code, Agence Web Créative" />
+	<meta name="twitter:image" content="images/lion.png" />
 	<!--================================================== CSS  ================================================== -->
 	<link rel="stylesheet" href="css/style.css" />
 	<link rel="stylesheet" href="css/grid.css" />
