--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="reply-to" content="contact@warp-code.fr">
     <meta name="robots" content="index, follow">
     <meta name="distribution" content="global">
-    <meta name="author" content="Sebastien CHAMPALAUNE, Florent Sadot, Cedric LE TALLEC">
+    <meta name="author" content="Sebastien CHAMPALAUNE, Florent SADOT, Cedric LE TALLEC">
     <meta name="copyright" content="Warp-Code"> 
     <meta name="abstract" content="Ce site presente l'activite de l'agence, qui nous sommes, ce que nous realisons">
     <meta name="msapplication-TileColor" content="#ffffff">
