--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" lang="fr" content="Warp Code Agence Web Creative à Vannes, realisation de sites internet, vitrine, e-commerce, applications web">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="publisher" content="WarpCode56">
-    <meta name="keywords" lang="fr" content="développemeent web, agence, responsive, design, application web, Vannes, Morbihan">
+    <meta name="keywords" lang="fr" content="développement web, agence, responsive, design, application web, Vannes, Morbihan">
     <meta name="reply-to" content="contact@warp-code.fr">
     <meta name="robots" content="index, follow">
     <meta name="distribution" content="global">
