--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 							</svg>
 						</div>
 						<h5 data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">Site e-commerce</h5>
-						<p data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">Appellée aussi boutique en ligne, il permet de développer votre activité commerciale.</p>
+						<p data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">Appelée aussi boutique en ligne, il permet de développer votre activité commerciale.</p>
 					</div>
 				</div>
 				<div class="four columns">
@@ -507,7 +507,10 @@
 				<div class="twelve columns center-item" data-scroll-reveal="enter bottom move 150px over 0.7s after 0.2s">
 					<div id="owl-logos" class="owl-carousel owl-theme">
 						<article class="item">
-							<img src="images/logos/white1.png" alt="" />
+							<img src="images/logos/sara.png" alt="logo de saraphotographie" />
+						</article>
+						<article class="item">
+							<img src="images/logos/luminis.png" alt="logo Luminis Prod" />
 						</article>
 						<article class="item">
 							<img src="images/logos/garden.png" alt="logo de Jardin Indoor" />
@@ -516,11 +519,9 @@
 							<img src="images/logos/kercode1.png" alt="logo de Kercode" />
 						</article>
 						<article class="item">
-							<img src="images/logos/white3.png" alt="logo de Luminis Prod" />
+							<img src="images/logos/greta1.png" alt="logo du greta bretagne sud" />
 						</article>
-						<article class="item">
-							<img src="images/logos/white4.png" alt="" />
-						</article>
+						
 					</div>
 				</div>
 			</div>
