logo after video

--- a/index.html
+++ b/index.html
@@ -91,12 +91,10 @@
 
 	<header class="section full-height back-dark" style="background: black;" id="home">
 
-		
-		<video class="banniere"  autoplay src="videos/warp1.mp4"></video>
-		<img class="poster" src="images/poster.png" alt="logo de l'entreprise">
 
-	
-
+			<video id="videoBackground" class="banniere"  autoplay="1" ><source src="videos/warp1.mp4" /></video>	
+			
+			<p id="wrapLogo"><img src="images/poster.png" class="poster" alt="logo de l'entreprise"></p>
 
 		<a href="#about" data-gal="m_PageScroll2id" data-ps2id-offset="78">
 			<div class="link-down fade-elements"></div>
