--- a/index.html
+++ b/index.html
@@ -163,18 +163,24 @@
 				<div class="four columns">
 					<div class="about-wrap">
 						<div class="about-icon">
-							<svg version="1.1" id="svg-icon-3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-							    x="0px" y="0px" width="48px" height="48px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
-								<rect x="1" y="7" fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" width="62" height="50" />
-								<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="1" y1="15" x2="63" y2="15" />
-								<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="10" y1="11" x2="6" y2="11" />
-								<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="18" y1="11" x2="14" y2="11" />
-								<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="26" y1="11" x2="22" y2="11" />
-								<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="6" y1="25" x2="33" y2="25" />
-								<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="6" y1="33" x2="33" y2="33" />
-								<line fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" x1="6" y1="41" x2="33" y2="41" />
-								<rect x="38" y="25" fill="none" stroke="#000000" stroke-width="2" stroke-miterlimit="10" width="19" height="16" />
-							</svg>
+								<svg version="1.1" id="svg-icon-3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+								width="48px" height="48px" viewBox="0 0 48 48" style="enable-background:new 0 0 48 48;" xml:space="preserve">
+						   <g id="XMLID_2_">
+							   <g id="XMLID_4_">
+								   <g id="XMLID_9_">
+									   <path fill="none" stroke="#0f0f0f" stroke-width="2" id="XMLID_12_" class="st0" d="M47.1,42.4c0,0.9-0.7,1.6-1.6,1.6h-8.9c-0.9,0-1.6-0.7-1.6-1.6V21.6c0-0.9,0.7-1.6,1.6-1.6
+										   h8.9c0.9,0,1.6,0.7,1.6,1.6V42.4z"/>
+									   <line fill="none" stroke="#0f0f0f" stroke-width="2" id="XMLID_11_" class="st0" x1="36.2" y1="24" x2="46.2" y2="24"/>
+									   <line fill="none" stroke="#0f0f0f" stroke-width="2" id="XMLID_10_" class="st0" x1="35.9" y1="40" x2="45.9" y2="40"/>
+								   </g>
+								   <path fill="none" stroke="#0f0f0f" stroke-width="2" id="XMLID_8_" class="st0" d="M35.1,36H4c-1.4,0-2.9-1.5-2.9-2.9V6.2C1.1,4.8,2.6,4,4,4h40.9c1.4,0,2.3,0.8,2.3,2.2V19"/>
+								   <line fill="none" stroke="#0f0f0f" stroke-width="2" id="XMLID_7_" class="st0" x1="2.1" y1="8" x2="46.1" y2="8"/>
+								   <line fill="none" stroke="#0f0f0f" stroke-width="2" id="XMLID_6_" class="st0" x1="2.1" y1="30" x2="35.1" y2="30"/>
+								   <polygon fill="none" stroke="#0f0f0f" stroke-width="2" id="XMLID_5_" class="st0" points="30.2,44 18.3,44 20,36 28.5,36 		"/>
+							   </g>
+							   <line fill="none" stroke="#0f0f0f" stroke-width="2" id="XMLID_3_" class="st0" x1="16.1" y1="44" x2="32.1" y2="44"/>
+						   </g>
+						   </svg>
 						</div>
 						<h5 data-scroll-reveal="enter bottom move 100px over 0.5s after 0.5s">Application Web</h5>
 						<p data-scroll-reveal="enter bottom move 100px over 0.5s after 0.5s">Véritable logiciel en ligne, elle permet de manipuler les données de manière dynamique via une interface administrable.</p>
