--- a/index.html
+++ b/index.html
@@ -519,6 +519,9 @@
 							<img src="images/logos/luminis.png" alt="logo Luminis Prod" />
 						</article>
 						<article class="item">
+							<img src="images/logos/tribus1.png" alt="logo tribus virtuelles" />
+						</article>
+						<article class="item">
 							<img src="images/logos/garden.png" alt="logo de Jardin Indoor" />
 						</article>
 						<article class="item">
